--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   http: ^0.13.4
   shared_preferences: ^2.0.15
   json_annotation: ^4.5.0
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/all-jobs-logo.jpg"
 
 dev_dependencies:
   flutter_test:
