--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
+
   flutter_svg: ^1.0.3
   carousel_slider: ^4.1.1
   flutter_staggered_grid_view: ^0.6.1
   intl_phone_field: ^3.1.0
   url_launcher: ^6.1.2
-  http: ^0.13.4
+  http: ^0.13.5
   shared_preferences: ^2.0.15
   json_annotation: ^4.5.0
   flutter_launcher_icons: ^0.10.0
   file_picker: ^5.0.1
+  fluttertoast: ^8.1.1
+  image_picker: ^0.8.6
+  image_cropper: ^3.0.1
 
 flutter_icons:
   android: "launcher_icon"
