--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   fluttertoast: ^8.1.1
   image_picker: ^0.8.6
   image_cropper: ^3.0.1
+  flutter_easyloading: ^3.0.5
+  provider: ^6.0.3
+
+
 
 flutter_icons:
   android: "launcher_icon"
