--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,12 @@
 	<string>Used to capture audio for image picker plugin</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Allow your camera, to create your Avatar</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	 <string>https</string>
+ 	 <string>http</string>
+ 	 <string>sms</string>
+  	 <string>tel</string>
+	</array>
 </dict>
 </plist>
